BugFix(Popovers): Fixed z-index of popover elements

--- a/data/styles/base/custom/mod_sidebar.less
+++ b/data/styles/base/custom/mod_sidebar.less
@@ -16,7 +16,7 @@
    padding-left: 0;
    padding-right: 0;
    background-color: @sidebar-first-level-bg;
-   z-index: 100;
+   z-index: 1029;
    display:block;
    
    &:before {
